# test-scrapper

./: .gitignore  Cargo.toml  README.md  test-scrapper.md
.github/workflows/: post-rust.yml  rust.yml
ci/sample-outputs/: output1.txt  output2.txt  output3.txt
common/: runs.json
common/src/: lib.rs
scrapper/: Cargo.toml
scrapper/src/: main.rs
scrapper/src/github/: client.rs  mod.rs  workflow.rs
scrapper/src/log_parser/: failed_tests.pest  mod.rs
src/: main.rs
src/github/: client.rs
src/log_parser/: failed_tests.pest  mod.rs
visualizer/: Cargo.toml  index.html
visualizer/src/: main.rs
visualizer/src/components/: app.rs  card_body.rs  card_header.rs  mod.rs
visualizer/src/components/cards/: header.rs  mod.rs  percentage.rs  scenario.rs  test.rs
visualizer/static/: runs.json
