[package]
name = "test-scrapper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
async-recursion = "1.1.0"
bytes = "1.6.0"
clap = { version = "4.5.4", features = ["derive"] }
futures = "0.3.30"
pest = "2.7.9"
pest_derive = "2.7.9"
rayon = "1.10.0"
reqwest = "0.12.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
